--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
     <script>
         // ===== OTP CONFIGURATION =====
-        const SECURE_OTP = "YOUR_SECURE_CODE"; // CHANGE THIS TO YOUR PASSWORD
+        const SECURE_OTP = "niggers"; // CHANGE THIS TO YOUR PASSWORD
         const MAX_ATTEMPTS = 3;
         let attempts = 0;
 
